[gd_scene load_steps=13 format=3 uid="uid://dw4b6bi23xp2j"]

[ext_resource type="PackedScene" uid="uid://dp0mi4kif2o1c" path="res://scenes/player.tscn" id="1_fjmar"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="1_p16a4"]
[ext_resource type="PackedScene" uid="uid://1hb8d2tvrhbs" path="res://scenes/Enemy.tscn" id="2_vp3hb"]
[ext_resource type="PackedScene" uid="uid://ddec5ir5q6bys" path="res://scenes/enemy_projectile.tscn" id="3_5vpb4"]
[ext_resource type="PackedScene" uid="uid://cfwro8ripytuo" path="res://scenes/EnemyHard.tscn" id="3_fisb7"]
[ext_resource type="PackedScene" uid="uid://74h1cvwcpenl" path="res://scenes/player_projectile.tscn" id="4_i483c"]
[ext_resource type="PackedScene" uid="uid://7nf8fbsxbiyy" path="res://scenes/HUD.tscn" id="4_ofvdb"]
[ext_resource type="Texture2D" uid="uid://c6oc3ygdl7vcr" path="res://art/background.png" id="5_keglc"]
[ext_resource type="PackedScene" uid="uid://8t1li61altqh" path="res://scenes/Powerup.tscn" id="5_xy5l6"]
[ext_resource type="Script" path="res://scripts/SpawnTimer.gd" id="6_8rbgp"]
[ext_resource type="AudioStream" uid="uid://d132krg2g2nqi" path="res://audio/Nighttime-Escape_v00_LoFi1.mp3" id="10_fdxhk"]

[sub_resource type="Curve2D" id="Curve2D_5w8pb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1112, 25, 0, 0, 0, 0, 1113, 616)
}
point_count = 2

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_p16a4")
enemy_scene = ExtResource("2_vp3hb")
hard_enemy_scene = ExtResource("3_fisb7")
enemy_projectile_scene = ExtResource("3_5vpb4")
player_projectile_scene = ExtResource("4_i483c")
powerup_scene = ExtResource("5_xy5l6")

[node name="Player" parent="." instance=ExtResource("1_fjmar")]
process_mode = 1
shot_cooldown_base = 0.275
speed_base = 225
invincibility = false

[node name="EnemyTimer" type="Timer" parent="."]
process_mode = 1
script = ExtResource("6_8rbgp")
rate_increate_per_second = 0.09

[node name="PowerupSpawnTimer" type="Timer" parent="."]
process_mode = 1
script = ExtResource("6_8rbgp")
rate_increate_per_second = 0.002
initial_rate_per_second = 0.05
max_spawn_rate = 0.5

[node name="PlayerStartPosition" type="Marker2D" parent="."]
process_mode = 3
position = Vector2(95, 325)

[node name="EnemyPath" type="Path2D" parent="."]
process_mode = 3
curve = SubResource("Curve2D_5w8pb")

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(1112, 25)
rotation = 1.5691

[node name="HUD" parent="." instance=ExtResource("4_ofvdb")]

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -20.0
offset_top = -11.0
offset_right = 1178.0
offset_bottom = 663.0
texture = ExtResource("5_keglc")
expand_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 1
stream = ExtResource("10_fdxhk")
volume_db = 6.575
autoplay = true

[node name="GameTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1

[node name="OneSecondTimer" type="Timer" parent="."]
process_mode = 1
autostart = true

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="EnemyTimer" method="_on_timeout"]
[connection signal="timeout" from="PowerupSpawnTimer" to="." method="_on_powerup_spawn_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="OneSecondTimer" to="EnemyTimer" method="_on_one_second_timer_timeout"]
[connection signal="timeout" from="OneSecondTimer" to="PowerupSpawnTimer" method="_on_one_second_timer_timeout"]
